# ChangeLog for dev-ruby/pdf-inspector
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/pdf-inspector/ChangeLog,v 1.11 2014/05/06 22:14:49 mrueg Exp $

  06 May 2014; Manuel Rüger <mrueg@gentoo.org> pdf-inspector-1.1.0.ebuild:
  Remove ruby18, add ruby20 target.

  28 Dec 2013; Manuel Rüger <mrueg@gentoo.org> -pdf-inspector-1.0.2.ebuild,
  pdf-inspector-1.1.0.ebuild:
  Update HOMEPAGE. Fixes #496302. Cleanup old.

*pdf-inspector-1.1.0 (13 Apr 2013)

  13 Apr 2013; Hans de Graaff <graaff@gentoo.org> +pdf-inspector-1.1.0.ebuild:
  Version bump.

  13 Apr 2013; Hans de Graaff <graaff@gentoo.org> -pdf-inspector-1.0.1.ebuild:
  Cleanup.

*pdf-inspector-1.0.2 (01 Dec 2012)

  01 Dec 2012; Hans de Graaff <graaff@gentoo.org> +pdf-inspector-1.0.2.ebuild:
  Version bump.

  27 Sep 2012; Samuli Suominen <ssuominen@gentoo.org>
  pdf-inspector-1.0.1.ebuild:
  Keyword ~ppc/~ppc64/~x86 wrt #417513

*pdf-inspector-1.0.1 (15 Apr 2012)

  15 Apr 2012; Hans de Graaff <graaff@gentoo.org> +pdf-inspector-1.0.1.ebuild,
  +metadata.xml:
  New test dependency for dev-ruby/prawn.