@@ -1,4 +1,5 @@
 DIST pdf-inspector-1.1.0.gem 25600 SHA256 bd65f7d254c66acdcb7bda4d42146441bea5fe7b01d768e3f9ee516434d13448 SHA512 71c8af4275421f952711bcc945c52adb6d19b153606fc067325951092cec58998e56373819aa55fa8c0e1cc4736204e3e11f03c3bc3ec121f5eb4e1327a48779 WHIRLPOOL 32e297d0dd73a5b159a03696bf68368e3797bbe73aac7dfac88d5a65af27b8b54a03a6be2282b3441f0d716f0b29a61ecae900efceced13033e6512870a21d8d
-EBUILD pdf-inspector-1.1.0.ebuild 620 SHA256 c193f930da215f6e22e84206e834b109b351896d2296fffbbc467526271dfa51 SHA512 368579cf73de537965747610e9fc0e27d37ad174fe1be531f275a83cdde750ab8e23bd8b23101baa7cec13626d7d0886a83767afd66f4413f7ed8e739bfcb948 WHIRLPOOL 634392719526b5e8f674f162b090d389c690b354fe60767775727b09f3d871bc6f2494a6f051eadf71f345df774df197b315444c5dff3bfb835b2fdb33fcc125
-MISC ChangeLog 1138 SHA256 599dd4f2fc25f81f82813ab16fea5829a71f4f786f09dc34eafa00b91abc785b SHA512 2e42159cfd1113d94e947e72194a3281503e8df6a71e6151f4317d78241efe01d4a6a212e3cbe246e5a35a092d98a72284f728ca544482dd66e5ba855d9fd943 WHIRLPOOL 1a4a343f32879a66ce569c9b05c056176349902d53b98be9eb807c031495e7b15754c2cc6cec0bbec9816e12b85d796a0f25bf710fa939aad6c0f6c354581c62
+EBUILD pdf-inspector-1.1.0-r1.ebuild 612 SHA256 f7dfe9d7d0039938f38f3ce2de4f44dd1bb3b75b03d9e8499c182b079e07e312 SHA512 ea40d5820f178e7738a3a6451204fcf88762744db45c743cfddad44cb901404aa7881ba8f70a15f90103410389e923c4345643334c1f0098f36504066fe3f18e WHIRLPOOL 02c05f9c108b5f3fb150f7af5b8b1d7fac1f488002f377f6bbc42dbb0432ee3be7d8408d249f51c25ed400ca9d5bd6c6788f400d4c6573e6db15cb6dddd69aed
+EBUILD pdf-inspector-1.1.0.ebuild 619 SHA256 4ec099bfe624fdcf6eba10a1ba9b17054a12ad47d8ab005c957f7afc12237db6 SHA512 c509580c69de363f1432cc5cce66c3373c8988a33d5aa2c58093201add95c5707deaa643d4a2af2d323d3c38408d3e6964d0e5068d012e5a1bc228e5e40a2ca1 WHIRLPOOL 5e3eca1fff79adf8ed556bbcc0b1a0e41feba17fba85a7376d84680014875a327651a0e6696980a1123f14e756122056d03af34a9e139ce35e342107c3265c2d
+MISC ChangeLog 1337 SHA256 fba03e6865b3b6b6f59df7d995350447f2d869c3754d5711ca90a9f73d9b947e SHA512 0099143181e9a44ef17a1b7c651d7f1ff924b4acce20b4dd708988a9dfa5a91227b0947bf8bee7446a914963c56417730250bfd1702a92cbcf24e03794bf0313 WHIRLPOOL 1abdac6db4ee885d4dd4d687cae6f205477d63792355505d024ab337937e004459f07be5c7c861f41a2130e1f3b0cde77e735304d1cf7a8eb0280e0826db7b9f
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
