@@ -1,10 +1,10 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/pdf-inspector/pdf-inspector-1.1.0.ebuild,v 1.4 2014/08/06 01:57:46 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/pdf-inspector/pdf-inspector-1.1.0-r1.ebuild,v 1.1 2014/08/06 01:57:45 mrueg Exp $
 
 EAPI=5
 
-USE_RUBY="ruby19 ruby20 jruby"
+USE_RUBY="ruby19 ruby20 ruby21 jruby"
 
 RUBY_FAKEGEM_TASK_TEST=""
 
@@ -18,7 +18,7 @@ HOMEPAGE="https://github.com/prawnpdf/pdf-inspector"
 
 LICENSE="|| ( Ruby GPL-2 GPL-3 )"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
+KEYWORDS="~amd64"
 IUSE=""
 
 ruby_add_rdepend ">=dev-ruby/pdf-reader-1.0"
