@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/pdf-inspector
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/pdf-inspector/ChangeLog,v 1.11 2014/05/06 22:14:49 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/pdf-inspector/ChangeLog,v 1.12 2014/08/06 01:57:46 mrueg Exp $
+
+*pdf-inspector-1.1.0-r1 (06 Aug 2014)
+
+  06 Aug 2014; Manuel Rüger <mrueg@gentoo.org> +pdf-inspector-1.1.0-r1.ebuild,
+  pdf-inspector-1.1.0.ebuild:
+  Add ruby21 target. Rekeywording in bug #519170
 
   06 May 2014; Manuel Rüger <mrueg@gentoo.org> pdf-inspector-1.1.0.ebuild:
   Remove ruby18, add ruby20 target.
